# ferrisquery

./: .gitignore  Cargo.toml  README.md
src/: database_api.rs  env.rs  interface.rs  main.rs  server_status.rs
src/commands/: crash.rs  mod.rs  run.rs  schedule_restart.rs  source.rs  tp_offline.rs  user_db.rs  whitelist.rs
