[package]
name = "ferrisquery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.16.0"
rcon = { version = "0.6.0", features = ["rt-tokio"] }
regex = "1.7.0"
serde = { version = "1.0.148", features = ["serde_derive"] }
serde_json = "1.0.91"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "fs"] }
toml = "0.5.9"
uuid-mc = "0.3.0"
