[package]
name = "ferrisquery"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10.0"
itertools = "0.10.5"
log = "0.4.17"
menv = "0.2.5"
once_cell = "1.16.0"
poise = "0.5.2"
rcon = { version = "0.6.0", features = ["rt-tokio"] }
regex = "1.7.0"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.148", features = ["serde_derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "fs"] }
toml = "0.5.9"
uuid-mc = "0.3.0"
